syntax = "proto3";
package data;

enum DataOpeType{
  Read = 0;
  Write = 1;
}

// depracated
enum DataModeCache {
  AlwaysInMem = 0;
  AlwaysInFs = 1;
}

// depracated
enum DataModeDistribute {
  BroadcastRough = 0;
}

// depracated
message DataMeta{
  DataModeCache cache = 1;
  DataModeDistribute distribute = 2;
}


message DataOpeRoleUploadApp{}

message DataOpeRoleFuncCall{
  string app_func=1;
  uint32 node_id=2;
}



message DataScheduleContext{
  // required
  int64 ope_node=1; // data source info
  // required
  DataOpeType ope_type = 2; 
  repeated uint32 each_data_sz_bytes=3; // split for big data
  // required
  oneof ope_role {
    // required
    DataOpeRoleUploadApp upload_app = 4;
    // required
    DataOpeRoleFuncCall func_call = 5;
  }
}

message EachNodeSplit{
  uint32 node_id=1;
  uint32 data_offset=2;
  uint32 data_size=3;
}

message DataSplit{
  repeated EachNodeSplit splits = 1;
}

message DataVersionScheduleRequest {
  bytes unique_id = 1;

  uint64 version = 2; 

  // required
  DataScheduleContext context = 3;
}

//message DataCachePlan{
//  uint32 cache_mode=1;
//  // left empty when mode is all node pr no node
//  repeated uint32 cache_nodes=2;
//}

message DataVersionScheduleResponse {
  uint64 version = 1;
  // required
  // split of each data part
  // DataCachePlan cache_plan = 2;
  repeated uint32 cache_mode=2;
  repeated DataSplit split = 3;
  repeated uint32 cache_nodes=4;
}

message DataMetaUpdateRequest{
  bytes unique_id = 1;
  uint64 version = 2;
  // left empty when no update
  bytes serialized_meta = 3;
}


// return same means updated, otherwise failed
message DataMetaUpdateResponse{
  uint64 version = 1;
  string message = 2; // Optional: To provide additional info in case of failure
}


message DataMetaGetRequest{
  bytes unique_id = 1;
  bool delete=2;
}

message DataMetaGetResponse{
  bytes serialized_meta = 1;
}

// message DataDeleteRequest{
//   message Optional{
//     uint64 version = 1;
//     bool data_needed = 2;
//   }
//   bytes unique_id = 1;
//   Optional optional = 2;
// }

// message DataDeleteResponse{
//   // left empty when no meta
//   bytes serialized_meta = 1;
//   DataItem data = 2;
// }


// 使用proto ext初始化
message FileData {
  string file_name_opt = 1; // store in the first node
  // 初始化时为空，只需要指定file_name_opt
  bool is_dir_opt =2;
  // file_content should be empty except when send the data split
  bytes file_content = 3;
}

// 使用proto ext初始化
message DataItem {
  oneof data_item_dispatch {
      FileData file = 1;
      bytes raw_bytes = 2;
  }
}

message OneDataMeta{
  uint32 idx=1;
  string type=2;
}

message DataItemWithIdx{
  uint32 idx=1;
  DataItem data=2;
}

message WriteOneDataRequest {
  bytes unique_id = 1;
  uint64 version = 2;
  repeated DataItemWithIdx data = 3;
}

message WriteOneDataResponse {
  uint64 remote_version = 1;
  bool success = 2;
  string message = 3; // Optional: To provide additional info in case of failure
}

message GetOneDataRequest{
  bytes unique_id=1;
  // bytes serialized_meta=2;
  repeated uint32 idxs=2;
  bool delete=3;
  bool return_data=4;
}

message GetOneDataResponse{
  bool success=1;
  repeated DataItem data =2;
  string message=3;
}

enum BatchDataBlockType {
    MEMORY = 0;    // 内存数据块
    FILE = 1;      // 文件数据块
    DIR=2;         // 目录数据块
}

message BatchRequestId {
    uint32 node_id = 1;               // 节点ID
    uint64 sequence = 2;              // 原子自增序列号
}

message BatchDataRequest {
    BatchRequestId request_id = 1;        // 请求唯一标识（节点ID + 序列号）
    bytes dataset_unique_id = 2;          // 数据集唯一标识
    uint32 data_item_idx = 3;            // 数据项索引
    BatchDataBlockType block_type = 4;    // 数据块类型（文件/内存）
    uint32 block_index = 5;              // 数据块索引
    bytes data = 6;                      // 数据块内容
    DataOpeType operation = 7;           // 操作类型
    bytes unique_id = 8;                 // 数据唯一标识
    uint64 version = 9;                  // 数据版本
    uint64 total_size = 10;              // 数据总大小
}

message BatchDataResponse {
    BatchRequestId request_id = 1;         // 对应请求ID
    bool success = 2;                    // 处理状态
    string error_message = 3;            // 错误信息
    uint64 version = 4;                  // 处理后的版本
}